# .Khoa_lap_trinh_C_AZ

./: Autosar.docx  AutosarMemStack.docx  C.docx  ~$C.docx
BT_Struct/: main.c  (+3 more)
Cpp/QT/113_Disconnecting/113_Disconnecting/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
Cpp/QT/113_Disconnecting/113_Disconnecting/build-113_Disconnecting-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Cpp/QT/113_Disconnecting/113_Disconnecting/build-113_Disconnecting-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-8d1af78ee92414e48ad1.json  cmakeFiles-v1-b0e91545b07b491165c4.json  (+5 more)
Cpp/QT/113_Disconnecting/113_Disconnecting/build-113_Disconnecting-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-19ddcf62acc314c2f78f.json  codemodel-v2-c4a7fd3541aea1e7f7b6.json  directory-.-Debug-b363530598311bf54246.json  index-2023-09-19T15-37-52-0784.json  target-113_Disconnecting-Debug-d8527c9333a1b2a9ff72.json
Cpp/QT/113_Disconnecting/113_Disconnecting/build-113_Disconnecting-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
Cpp/QT/113_Disconnecting/113_Disconnecting/build-113_Disconnecting-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/113_Disconnecting_autogen/: deps
Cpp/QT/113_Disconnecting/113_Disconnecting/build-113_Disconnecting-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/113_Disconnecting_autogen/EWIEGA46WW/: moc_radio.cpp.d  moc_station.cpp.d
Cpp/QT/11_Signal_Slot/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp  source.h
(+1092 files in other folders)
